--- a/cv.html
+++ b/cv.html
@@ -55,23 +55,23 @@
             <nav id="nav-open">
                 <ul id="ul-nav">
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/">Informații personale</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/">Informații personale</a>
                     </li>
                     <li>
                         <a href="#" class="activ">CV</a>
                     </li>
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/proiecte">Proiecte</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/proiecte">Proiecte</a>
                     </li>
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/contact">Contactați-mă</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/contact">Contactați-mă</a>
                     </li>
                     <li>
                         <div class="lang">
                             <div class="drop-btn">&#9660</div>
                             <div class="drop-content">
                                 <a href="#">RO <img src="image/vecteezy_romania-flag-waves-with-realistic-bump-texture-flag_21300072_727.jpg" alt="Romanian Flag"></a>
-                                <a href="https://digital-cyber1.github.io/alex/resume">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
+                                <a href="https://alexalexandru20.github.io/alex.github.io/resume">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
                             </div>
                         </div>
                     </li>
@@ -152,10 +152,6 @@
                             <th>Abilități de învățare continuă</th>
                             <th>Planificare și organizare</th>
                         </tr>
-                        <tr>
-                            <th>Desen Tehnic</th>
-                            <th>Stingerea Incendiilor, Descarcerare, Prim Ajutor</th>
-                        </tr>
                     </table>
                 </div>
                 <div class="titlu2-more">
@@ -196,18 +192,13 @@
                     <div class="title">Urmărește-mă</div>
                     <div class="link-media">
                         <div class="site-enterprise">
-                            <a href="#">
+                            <a href="https://alexalexandru20.github.io/alex.github.io/">
                                 <img src="image/icon0-vector-441-01.jpg" alt="Web">
                             </a>
                         </div>
                         <div class="linkedin">
-                            <a href="#">
+                            <a href="www.linkedin.com/in/alexandru-popica-827902231">
                                 <img src="image/vecteezy_blue-color-white-background-linkedin-design-logo-sign-symbol_9097186.jpg" alt="LinkedIn">
-                            </a>
-                        </div>
-                        <div class="ig">
-                            <a href="#">
-                                <img src="image/vecteezy_instagram-mobile-app-logo-instagram-app-icon-ig-app-free_18910689.jpg" alt="Instagram">
                             </a>
                         </div>
                     </div>
