--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="first-title">
             <div class="square-name">
                 <span class="square"></span>
-                <div class="name">Alexandru Popica</div>
+                <div class="name"><a href="https://alexalexandru20.github.io/alex.github.io/">Alexandru Popica</a></div>
             </div>
             <div class="job">Frontend Developer</div>
         </div>
@@ -60,20 +60,20 @@
                         <a href="#" class="activ">Informații personale</a>
                     </li>
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/cv">CV</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/cv">CV</a>
                     </li>
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/proiecte">Proiecte</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/proiecte">Proiecte</a>
                     </li>
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/contact">Contactați-mă</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/contact">Contactați-mă</a>
                     </li>
                     <li>
                         <div class="lang">
                             <div class="drop-btn">&#9660</div>
                             <div class="drop-content">
                                 <a href="#">RO <img src="image/vecteezy_romania-flag-waves-with-realistic-bump-texture-flag_21300072_727.jpg" alt="Romanian Flag"></a>
-                                <a href="https://digital-cyber1.github.io/alex/en">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
+                                <a href="https://alexalexandru20.github.io/alex.github.io/en">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
                             </div>
                         </div>
                     </li>
@@ -95,18 +95,13 @@
                 </div>
                 <div class="social">
                     <div class="site-enterprise">
-                        <a href="#">
+                        <a href="https://alexalexandru20.github.io/alex.github.io/">
                             <img src="image/icon0-vector-441-01.jpg" alt="Web">
                         </a>
                     </div>
                     <div class="linkedin">
-                        <a href="#">
+                        <a href="www.linkedin.com/in/alexandru-popica-827902231">
                             <img src="image/vecteezy_blue-color-white-background-linkedin-design-logo-sign-symbol_9097186.jpg" alt="LinkedIn">
-                        </a>
-                    </div>
-                    <div class="ig">
-                        <a href="#">
-                            <img src="image/vecteezy_instagram-mobile-app-logo-instagram-app-icon-ig-app-free_18910689.jpg" alt="Instagram">
                         </a>
                     </div>
                 </div>
@@ -120,17 +115,17 @@
                 </div>
                 <div class="buttons">
                     <div class="cv-button btn">
-                        <a href="https://digital-cyber1.github.io/alex/cv">CV</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/cv">CV</a>
                     </div>
                     <div class="proj-button btn">
-                        <a href="https://digital-cyber1.github.io/alex/proiecte">Proiecte</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/proiecte">Proiecte</a>
                     </div>
                 </div>
                 <div class="descriere">
-                    Ca antreprenor în devenire în domeniul dezvoltării web, sunt condus de o pasiune neînfricată de a crea experiențe digitale captivante. Cu un ochi vigilent pentru detalii și un angajament de a fi în pas cu tehnologia, mă dezvolt în a transforma idei în site-uri elegante și funcționale.
+                    Sunt un pasionat web developer cu competențe extinse în HTML, CSS, JavaScript și PHP, alături de experiență în gestionarea bazelelor de date. Transform idei în site-uri interactive, folosind tehnologii moderne pentru a crea experiențe online captivante.
                 </div>
                 <div class="descriere">
-                    Curiozitatea mea alimentează învățarea continuă, permițându-mi să stăpânesc limbaje de programare de ultimă oră și să abordez concepte de design inovatoare.
+                    Aduc la viață interfețe vizuale atractive și funcționalități eficiente. Mă străduiesc să aduc inovație în fiecare proiect și să ofer utilizatorilor experiențe web memorabile și plăcute, datorită atenției mele la detalii și pasiunii pentru dezvoltarea web.                
                 </div>
             </div>
         </div>
@@ -159,18 +154,13 @@
                     <div class="title">Urmărește-mă</div>
                     <div class="link-media">
                         <div class="site-enterprise">
-                            <a href="#">
+                            <a href="https://alexalexandru20.github.io/alex.github.io/">
                                 <img src="image/icon0-vector-441-01.jpg" alt="Web">
                             </a>
                         </div>
                         <div class="linkedin">
-                            <a href="#">
+                            <a href="www.linkedin.com/in/alexandru-popica-827902231">
                                 <img src="image/vecteezy_blue-color-white-background-linkedin-design-logo-sign-symbol_9097186.jpg" alt="LinkedIn">
-                            </a>
-                        </div>
-                        <div class="ig">
-                            <a href="#">
-                                <img src="image/vecteezy_instagram-mobile-app-logo-instagram-app-icon-ig-app-free_18910689.jpg" alt="Instagram">
                             </a>
                         </div>
                     </div>
