--- a/proiecte.html
+++ b/proiecte.html
@@ -55,23 +55,23 @@
             <nav id="nav-open">
                 <ul id="ul-nav">
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/">Informații personale</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/">Informații personale</a>
                     </li>
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/cv">CV</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/cv">CV</a>
                     </li>
                     <li>
                         <a href="#" class="activ">Proiecte</a>
                     </li>
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/contact">Contactați-mă</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/contact">Contactați-mă</a>
                     </li>
                     <li>
                         <div class="lang">
                             <div class="drop-btn">&#9660</div>
                             <div class="drop-content">
                                 <a href="#">RO <img src="image/vecteezy_romania-flag-waves-with-realistic-bump-texture-flag_21300072_727.jpg" alt="Romanian Flag"></a>
-                                <a href="https://digital-cyber1.github.io/alex/projects">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
+                                <a href="https://alexalexandru20.github.io/alex.github.io/projects">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
                             </div>
                         </div>
                     </li>
@@ -85,7 +85,7 @@
             <div class="text-titlu">Proiecte</div>
         </div>
         <div class="describe">
-            <p>Prin proiectele mele, inclusiv site-ul liceului, pagina de intranet, pagina personală și pagina viitoarei mele firme, am demonstrat dorința mea de a învăța și de a oferi rezultate remarcabile.</p>
+            <p>Prin proiectele mele, demonstrez dorința mea de a învăța și de a oferi rezultate remarcabile.</p>
             <p>În calitate de începător, sunt dedicat creșterii și obținerii unor rezultate excelente.</p>
         </div>
         <div class="content-box">
@@ -161,18 +161,13 @@
                     <div class="title">Urmărește-mă</div>
                     <div class="link-media">
                         <div class="site-enterprise">
-                            <a href="#">
+                            <a href="https://alexalexandru20.github.io/alex.github.io/">
                                 <img src="image/icon0-vector-441-01.jpg" alt="Web">
                             </a>
                         </div>
                         <div class="linkedin">
-                            <a href="#">
+                            <a href="www.linkedin.com/in/alexandru-popica-827902231">
                                 <img src="image/vecteezy_blue-color-white-background-linkedin-design-logo-sign-symbol_9097186.jpg" alt="LinkedIn">
-                            </a>
-                        </div>
-                        <div class="ig">
-                            <a href="#">
-                                <img src="image/vecteezy_instagram-mobile-app-logo-instagram-app-icon-ig-app-free_18910689.jpg" alt="Instagram">
                             </a>
                         </div>
                     </div>
