--- a/en.html
+++ b/en.html
@@ -42,7 +42,7 @@
         <div class="first-title">
             <div class="square-name">
                 <span class="square"></span>
-                <div class="name">Alexandru Popica</div>
+                <div class="name"><a href="https://digital-cyber1.github.io/alex/en">Alexandru Popica</a></div>
             </div>
             <div class="job">Frontend Developer</div>
         </div>
@@ -57,19 +57,19 @@
                         <a href="#" class="activ">About Me</a>
                     </li>
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/resume">Resume</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/resume">Resume</a>
                     </li>
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/projects">Projects</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/projects">Projects</a>
                     </li>
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/contact-en">Contact</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/contact-en">Contact</a>
                     </li>
                     <li>
                         <div class="lang">
                             <div class="drop-btn">&#9660</div>
                             <div class="drop-content">
-                                <a href="https://digital-cyber1.github.io/alex/">RO <img src="image/vecteezy_romania-flag-waves-with-realistic-bump-texture-flag_21300072_727.jpg" alt="Romanian Flag"></a>
+                                <a href="https://alexalexandru20.github.io/alex.github.io/">RO <img src="image/vecteezy_romania-flag-waves-with-realistic-bump-texture-flag_21300072_727.jpg" alt="Romanian Flag"></a>
                                 <a href="#">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
                             </div>
                         </div>
@@ -117,10 +117,10 @@
                 </div>
                 <div class="buttons">
                     <div class="cv-button btn">
-                        <a href="https://digital-cyber1.github.io/alex/resume">Resume</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/resume">Resume</a>
                     </div>
                     <div class="proj-button btn">
-                        <a href="https://digital-cyber1.github.io/alex/projects">Projects</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/projects">Projects</a>
                     </div>
                 </div>
                 <div class="descriere">
