--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="first-title">
             <div class="square-name">
                 <span class="square"></span>
-                <div class="name"><a href="https://alexalexandru20.github.io/alex.github.io/">Alexandru Popica</a></div>
+                <div class="name"><a href="https://digital-cyber1.github.io/alex/">Alexandru Popica</a></div>
             </div>
             <div class="job">Frontend Developer</div>
         </div>
@@ -60,20 +60,20 @@
                         <a href="#" class="activ">Informații personale</a>
                     </li>
                     <li>
-                        <a href="https://alexalexandru20.github.io/alex.github.io/cv">CV</a>
+                        <a href="https://digital-cyber1.github.io/alex/cv">CV</a>
                     </li>
                     <li>
-                        <a href="https://alexalexandru20.github.io/alex.github.io/proiecte">Proiecte</a>
+                        <a href="https://digital-cyber1.github.io/alex/proiecte">Proiecte</a>
                     </li>
                     <li>
-                        <a href="https://alexalexandru20.github.io/alex.github.io/contact">Contactați-mă</a>
+                        <a href="https://digital-cyber1.github.io/alex/contact">Contactați-mă</a>
                     </li>
                     <li>
                         <div class="lang">
                             <div class="drop-btn">&#9660</div>
                             <div class="drop-content">
                                 <a href="#">RO <img src="image/vecteezy_romania-flag-waves-with-realistic-bump-texture-flag_21300072_727.jpg" alt="Romanian Flag"></a>
-                                <a href="https://alexalexandru20.github.io/alex.github.io/en">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
+                                <a href="https://digital-cyber1.github.io/alex/en">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
                             </div>
                         </div>
                     </li>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="social">
                     <div class="site-enterprise">
-                        <a href="https://alexalexandru20.github.io/alex.github.io/">
+                        <a href="https://digital-cyber1.github.io/alex/">
                             <img src="image/icon0-vector-441-01.jpg" alt="Web">
                         </a>
                     </div>
@@ -115,10 +115,10 @@
                 </div>
                 <div class="buttons">
                     <div class="cv-button btn">
-                        <a href="https://alexalexandru20.github.io/alex.github.io/cv">CV</a>
+                        <a href="https://digital-cyber1.github.io/alex/cv">CV</a>
                     </div>
                     <div class="proj-button btn">
-                        <a href="https://alexalexandru20.github.io/alex.github.io/proiecte">Proiecte</a>
+                        <a href="https://digital-cyber1.github.io/alex/proiecte">Proiecte</a>
                     </div>
                 </div>
                 <div class="descriere">
@@ -154,7 +154,7 @@
                     <div class="title">Urmărește-mă</div>
                     <div class="link-media">
                         <div class="site-enterprise">
-                            <a href="https://alexalexandru20.github.io/alex.github.io/">
+                            <a href="https://digital-cyber1.github.io/alex/">
                                 <img src="image/icon0-vector-441-01.jpg" alt="Web">
                             </a>
                         </div>
