--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
         <div class="first-title">
             <div class="square-name">
                 <span class="square"></span>
-                <div class="name">Alexandru Popica</div>
+                <div class="name"><a href="https://digital-cyber1.github.io/alex/en">Alexandru Popica</a></div>
             </div>
             <div class="job">Frontend Developer</div>
         </div>
@@ -55,22 +55,22 @@
             <nav id="nav-open">
                 <ul id="ul-nav">
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/en">About Me</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/en">About Me</a>
                     </li>
                     <li>
                         <a href="#" class="activ">Resume</a>
                     </li>
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/projects">Projects</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/projects">Projects</a>
                     </li>
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/contact-en">Contact</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/contact-en">Contact</a>
                     </li>
                     <li>
                         <div class="lang">
                             <div class="drop-btn">&#9660</div>
                             <div class="drop-content">
-                                <a href="https://digital-cyber1.github.io/alex/cv">RO <img src="image/vecteezy_romania-flag-waves-with-realistic-bump-texture-flag_21300072_727.jpg" alt="Romanian Flag"></a>
+                                <a href="https://alexalexandru20.github.io/alex.github.io/cv">RO <img src="image/vecteezy_romania-flag-waves-with-realistic-bump-texture-flag_21300072_727.jpg" alt="Romanian Flag"></a>
                                 <a href="#">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
                             </div>
                         </div>
