--- a/contact-en.html
+++ b/contact-en.html
@@ -43,7 +43,7 @@
         <div class="first-title">
             <div class="square-name">
                 <span class="square"></span>
-                <div class="name">Alexandru Popica</div>
+                <div class="name"><a href="https://digital-cyber1.github.io/alex/en">Alexandru Popica</a></div>
             </div>
             <div class="job">Frontend Developer</div>
         </div>
@@ -138,18 +138,13 @@
                     <div class="title">Follow</div>
                     <div class="link-media">
                         <div class="site-enterprise">
-                            <a href="#">
+                            <a href="https://digital-cyber1.github.io/alex/">
                                 <img src="image/icon0-vector-441-01.jpg" alt="Web">
                             </a>
                         </div>
                         <div class="linkedin">
                             <a href="#">
                                 <img src="image/vecteezy_blue-color-white-background-linkedin-design-logo-sign-symbol_9097186.jpg" alt="LinkedIn">
-                            </a>
-                        </div>
-                        <div class="ig">
-                            <a href="#">
-                                <img src="image/vecteezy_instagram-mobile-app-logo-instagram-app-icon-ig-app-free_18910689.jpg" alt="Instagram">
                             </a>
                         </div>
                     </div>
