--- a/cv.html
+++ b/cv.html
@@ -43,7 +43,7 @@
         <div class="first-title">
             <div class="square-name">
                 <span class="square"></span>
-                <div class="name">Alexandru Popica</div>
+                <div class="name"><a href="https://digital-cyber1.github.io/alex/">Alexandru Popica</a></div>
             </div>
             <div class="job">Frontend Developer</div>
         </div>
@@ -55,23 +55,23 @@
             <nav id="nav-open">
                 <ul id="ul-nav">
                     <li>
-                        <a href="https://alexalexandru20.github.io/alex.github.io/">Informații personale</a>
+                        <a href="https://digital-cyber1.github.io/alex/">Informații personale</a>
                     </li>
                     <li>
                         <a href="#" class="activ">CV</a>
                     </li>
                     <li>
-                        <a href="https://alexalexandru20.github.io/alex.github.io/proiecte">Proiecte</a>
+                        <a href="https://digital-cyber1.github.io/alex/proiecte">Proiecte</a>
                     </li>
                     <li>
-                        <a href="https://alexalexandru20.github.io/alex.github.io/contact">Contactați-mă</a>
+                        <a href="https://digital-cyber1.github.io/alex/contact">Contactați-mă</a>
                     </li>
                     <li>
                         <div class="lang">
                             <div class="drop-btn">&#9660</div>
                             <div class="drop-content">
                                 <a href="#">RO <img src="image/vecteezy_romania-flag-waves-with-realistic-bump-texture-flag_21300072_727.jpg" alt="Romanian Flag"></a>
-                                <a href="https://alexalexandru20.github.io/alex.github.io/resume">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
+                                <a href="https://digital-cyber1.github.io/alex/resume">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
                             </div>
                         </div>
                     </li>
@@ -192,7 +192,7 @@
                     <div class="title">Urmărește-mă</div>
                     <div class="link-media">
                         <div class="site-enterprise">
-                            <a href="https://alexalexandru20.github.io/alex.github.io/">
+                            <a href="https://digital-cyber1.github.io/alex/">
                                 <img src="image/icon0-vector-441-01.jpg" alt="Web">
                             </a>
                         </div>
