--- a/proiecte.html
+++ b/proiecte.html
@@ -43,7 +43,7 @@
         <div class="first-title">
             <div class="square-name">
                 <span class="square"></span>
-                <div class="name">Alexandru Popica</div>
+                <div class="name"><a href="https://digital-cyber1.github.io/alex/">Alexandru Popica</a></div>
             </div>
             <div class="job">Frontend Developer</div>
         </div>
