--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
         <div class="first-title">
             <div class="square-name">
                 <span class="square"></span>
-                <div class="name">Alexandru Popica</div>
+                <div class="name"><a href="https://digital-cyber1.github.io/alex/en">Alexandru Popica</a></div>
             </div>
             <div class="job">Frontend Developer</div>
         </div>
@@ -55,22 +55,22 @@
             <nav id="nav-open">
                 <ul id="ul-nav">
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/en">About Me</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/en">About Me</a>
                     </li>
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/resume">Resume</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/resume">Resume</a>
                     </li>
                     <li>
                         <a href="#" class="activ">Projects</a>
                     </li>
                     <li>
-                        <a href="https://digital-cyber1.github.io/alex/contact-en">Contact</a>
+                        <a href="https://alexalexandru20.github.io/alex.github.io/contact-en">Contact</a>
                     </li>
                     <li>
                         <div class="lang">
                             <div class="drop-btn">&#9660</div>
                             <div class="drop-content">
-                                <a href="https://digital-cyber1.github.io/alex/proiecte">RO <img src="image/vecteezy_romania-flag-waves-with-realistic-bump-texture-flag_21300072_727.jpg" alt="Romanian Flag"></a>
+                                <a href="https://alexalexandru20.github.io/alex.github.io/proiecte">RO <img src="image/vecteezy_romania-flag-waves-with-realistic-bump-texture-flag_21300072_727.jpg" alt="Romanian Flag"></a>
                                 <a href="#">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
                             </div>
                         </div>
@@ -110,7 +110,7 @@
                 <div class="left">
                     <div class="year">Intranet Platform</div>
                     <div class="content">
-                        <a href="https://intranet.liceultehnologicconstantinbrancusi.eu/" target="_blank">
+                        <a href="https://intranet.liceultehnologicconstantinbrancusi.eu/login.html" target="_blank">
                             <img src="image/intranet.jpg" alt="Intranet">
                             <div class="overlay">
                                 <div class="over-text">Click Me</div>
