--- a/en.html
+++ b/en.html
@@ -124,10 +124,10 @@
                     </div>
                 </div>
                 <div class="descriere">
-                    As a budding entrepreneur in the field of web development, I am driven by an undaunted passion for creating captivating digital experiences. With a vigilant eye for details and a commitment to staying abreast of technology, I strive to transform ideas into elegant and functional websites.
+                    I'm a passionate web developer with extensive proficiency in HTML, CSS, JavaScript, and PHP, coupled with experience in database management. I translate ideas into interactive websites, utilizing modern technologies to create captivating online experiences. 
                 </div>
                 <div class="descriere">
-                    My curiosity fuels continuous learning, allowing me to master cutting-edge programming languages and embrace innovative design concepts.
+                    I bring visually appealing interfaces to life, along with efficient functionalities. I strive to innovate in every project and provide users with memorable and enjoyable web experiences, driven by my attention to detail and passion for web development.                                
                 </div>
             </div>
         </div>
@@ -156,18 +156,13 @@
                     <div class="title">Follow</div>
                     <div class="link-media">
                         <div class="site-enterprise">
-                            <a href="#">
+                            <a href="https://digital-cyber1.github.io/alex/">
                                 <img src="image/icon0-vector-441-01.jpg" alt="Web">
                             </a>
                         </div>
                         <div class="linkedin">
-                            <a href="#">
+                            <a href="www.linkedin.com/in/alexandru-popica-827902231">
                                 <img src="image/vecteezy_blue-color-white-background-linkedin-design-logo-sign-symbol_9097186.jpg" alt="LinkedIn">
-                            </a>
-                        </div>
-                        <div class="ig">
-                            <a href="#">
-                                <img src="image/vecteezy_instagram-mobile-app-logo-instagram-app-icon-ig-app-free_18910689.jpg" alt="Instagram">
                             </a>
                         </div>
                     </div>
