--- a/en.html
+++ b/en.html
@@ -57,19 +57,19 @@
                         <a href="#" class="activ">About Me</a>
                     </li>
                     <li>
-                        <a href="https://alexalexandru20.github.io/alex.github.io/resume">Resume</a>
+                        <a href="https://digital-cyber1.github.io/alex/resume">Resume</a>
                     </li>
                     <li>
-                        <a href="https://alexalexandru20.github.io/alex.github.io/projects">Projects</a>
+                        <a href="https://digital-cyber1.github.io/alex/projects">Projects</a>
                     </li>
                     <li>
-                        <a href="https://alexalexandru20.github.io/alex.github.io/contact-en">Contact</a>
+                        <a href="https://digital-cyber1.github.io/alex/contact-en">Contact</a>
                     </li>
                     <li>
                         <div class="lang">
                             <div class="drop-btn">&#9660</div>
                             <div class="drop-content">
-                                <a href="https://alexalexandru20.github.io/alex.github.io/">RO <img src="image/vecteezy_romania-flag-waves-with-realistic-bump-texture-flag_21300072_727.jpg" alt="Romanian Flag"></a>
+                                <a href="https://digital-cyber1.github.io/alex/">RO <img src="image/vecteezy_romania-flag-waves-with-realistic-bump-texture-flag_21300072_727.jpg" alt="Romanian Flag"></a>
                                 <a href="#">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
                             </div>
                         </div>
@@ -92,18 +92,13 @@
                 </div>
                 <div class="social">
                     <div class="site-enterprise">
-                        <a href="#">
+                        <a href="https://digital-cyber1.github.io/alex/">
                             <img src="image/icon0-vector-441-01.jpg" alt="Web">
                         </a>
                     </div>
                     <div class="linkedin">
-                        <a href="#">
+                        <a href="https://www.linkedin.com/in/alexandru-popica-827902231">
                             <img src="image/vecteezy_blue-color-white-background-linkedin-design-logo-sign-symbol_9097186.jpg" alt="LinkedIn">
-                        </a>
-                    </div>
-                    <div class="ig">
-                        <a href="#">
-                            <img src="image/vecteezy_instagram-mobile-app-logo-instagram-app-icon-ig-app-free_18910689.jpg" alt="Instagram">
                         </a>
                     </div>
                 </div>
@@ -117,10 +112,10 @@
                 </div>
                 <div class="buttons">
                     <div class="cv-button btn">
-                        <a href="https://alexalexandru20.github.io/alex.github.io/resume">Resume</a>
+                        <a href="https://digital-cyber1.github.io/alex/resume">Resume</a>
                     </div>
                     <div class="proj-button btn">
-                        <a href="https://alexalexandru20.github.io/alex.github.io/projects">Projects</a>
+                        <a href="https://digital-cyber1.github.io/alex/projects">Projects</a>
                     </div>
                 </div>
                 <div class="descriere">
@@ -161,7 +156,7 @@
                             </a>
                         </div>
                         <div class="linkedin">
-                            <a href="www.linkedin.com/in/alexandru-popica-827902231">
+                            <a href="https://www.linkedin.com/in/alexandru-popica-827902231">
                                 <img src="image/vecteezy_blue-color-white-background-linkedin-design-logo-sign-symbol_9097186.jpg" alt="LinkedIn">
                             </a>
                         </div>
