--- a/projects.html
+++ b/projects.html
@@ -55,22 +55,22 @@
             <nav id="nav-open">
                 <ul id="ul-nav">
                     <li>
-                        <a href="https://alexalexandru20.github.io/alex.github.io/en">About Me</a>
+                        <a href="https://digital-cyber1.github.io/alex/en">About Me</a>
                     </li>
                     <li>
-                        <a href="https://alexalexandru20.github.io/alex.github.io/resume">Resume</a>
+                        <a href="https://digital-cyber1.github.io/alex/resume">Resume</a>
                     </li>
                     <li>
                         <a href="#" class="activ">Projects</a>
                     </li>
                     <li>
-                        <a href="https://alexalexandru20.github.io/alex.github.io/contact-en">Contact</a>
+                        <a href="https://digital-cyber1.github.io/alex/contact-en">Contact</a>
                     </li>
                     <li>
                         <div class="lang">
                             <div class="drop-btn">&#9660</div>
                             <div class="drop-content">
-                                <a href="https://alexalexandru20.github.io/alex.github.io/proiecte">RO <img src="image/vecteezy_romania-flag-waves-with-realistic-bump-texture-flag_21300072_727.jpg" alt="Romanian Flag"></a>
+                                <a href="https://digital-cyber1.github.io/alex/proiecte">RO <img src="image/vecteezy_romania-flag-waves-with-realistic-bump-texture-flag_21300072_727.jpg" alt="Romanian Flag"></a>
                                 <a href="#">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                             </a>
                         </div>
                         <div class="linkedin">
-                            <a href="www.linkedin.com/in/alexandru-popica-827902231">
+                            <a href="https://www.linkedin.com/in/alexandru-popica-827902231">
                                 <img src="image/vecteezy_blue-color-white-background-linkedin-design-logo-sign-symbol_9097186.jpg" alt="LinkedIn">
                             </a>
                         </div>
