--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         </a>
                     </div>
                     <div class="linkedin">
-                        <a href="www.linkedin.com/in/alexandru-popica-827902231">
+                        <a href="https://www.linkedin.com/in/alexandru-popica-827902231">
                             <img src="image/vecteezy_blue-color-white-background-linkedin-design-logo-sign-symbol_9097186.jpg" alt="LinkedIn">
                         </a>
                     </div>
@@ -159,7 +159,7 @@
                             </a>
                         </div>
                         <div class="linkedin">
-                            <a href="www.linkedin.com/in/alexandru-popica-827902231">
+                            <a href="https://www.linkedin.com/in/alexandru-popica-827902231">
                                 <img src="image/vecteezy_blue-color-white-background-linkedin-design-logo-sign-symbol_9097186.jpg" alt="LinkedIn">
                             </a>
                         </div>
