--- a/proiecte.html
+++ b/proiecte.html
@@ -166,7 +166,7 @@
                             </a>
                         </div>
                         <div class="linkedin">
-                            <a href="https://www.linkedin.com/in/alexandru-popica-827902231">
+                            <a href="https://www.linkedin.com/in/alexandru-popica-827902231" target="_blank">
                                 <img src="image/vecteezy_blue-color-white-background-linkedin-design-logo-sign-symbol_9097186.jpg" alt="LinkedIn">
                             </a>
                         </div>
