--- a/proiecte.html
+++ b/proiecte.html
@@ -91,6 +91,18 @@
         <div class="content-box">
             <div class="box">
                 <div class="left">
+                    <div class="year">Website ProIT - În construcție</div>
+                    <div class="content">
+                        <img src="image/proit.png" alt="PROIT">
+                    </div>
+                </div>
+                <div class="right">
+                    <p>Am creat un website de prezentare pentru o firmă specializată în reparații de calculatoare.</p>
+                    <p>Site-ul evidențiază gama completă de servicii și experiența firmei într-un format online accesibil, contribuind la creșterea vizibilității și atractivității acesteia în piață.</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="left">
                     <div class="year">Site-ul Liceului</div>
                     <div class="content">
                         <a href="https://liceultehnologicconstantinbrancusi.eu" target="_blank">
