--- a/projects.html
+++ b/projects.html
@@ -85,10 +85,22 @@
             <div class="text-titlu">Projects</div>
         </div>
         <div class="describe">
-            <p>Through my projects, including the school website, intranet page, personal webpage, and future company page, I have showcased my eagerness to learn and deliver outstanding results. I have demonstrated a strong commitment to continuous improvement and a drive to exceed expectations.</p>
+            <p>Through my projects, I showcase my eagerness to learn and deliver remarkable results.</p>
             <p>As a beginner, I am dedicated to growth and achieving excellent results. I approach every opportunity with enthusiasm.</p>
         </div>
         <div class="content-box">
+            <div class="box">
+                <div class="left">
+                    <div class="year">ProIT Website - Working</div>
+                    <div class="content">
+                        <img src="image/proit.png" alt="PROIT">
+                    </div>
+                </div>
+                <div class="right">
+                    <p>I have created a showcase website for a computer repair company.</p>
+                    <p> The site highlights the full range of services and the company's expertise in an accessible online format, enhancing its visibility and appeal in the market.</p>
+                </div>
+            </div>
             <div class="box">
                 <div class="left">
                     <div class="year">High School Website</div>
