--- a/proiecte.html
+++ b/proiecte.html
@@ -55,23 +55,23 @@
             <nav id="nav-open">
                 <ul id="ul-nav">
                     <li>
-                        <a href="https://alexalexandru20.github.io/alex.github.io/">Informații personale</a>
+                        <a href="https://digital-cyber1.github.io/alex/">Informații personale</a>
                     </li>
                     <li>
-                        <a href="https://alexalexandru20.github.io/alex.github.io/cv">CV</a>
+                        <a href="https://digital-cyber1.github.io/alex/cv">CV</a>
                     </li>
                     <li>
                         <a href="#" class="activ">Proiecte</a>
                     </li>
                     <li>
-                        <a href="https://alexalexandru20.github.io/alex.github.io/contact">Contactați-mă</a>
+                        <a href="https://digital-cyber1.github.io/alex/contact">Contactați-mă</a>
                     </li>
                     <li>
                         <div class="lang">
                             <div class="drop-btn">&#9660</div>
                             <div class="drop-content">
                                 <a href="#">RO <img src="image/vecteezy_romania-flag-waves-with-realistic-bump-texture-flag_21300072_727.jpg" alt="Romanian Flag"></a>
-                                <a href="https://alexalexandru20.github.io/alex.github.io/projects">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
+                                <a href="https://digital-cyber1.github.io/alex/projects">EN <img src="image/vecteezy_united-kingdom-flag-waves-with-realistic-bump-texture-flag_21300351_620.jpg" alt="UK Flag"></a>
                             </div>
                         </div>
                     </li>
@@ -173,7 +173,7 @@
                     <div class="title">Urmărește-mă</div>
                     <div class="link-media">
                         <div class="site-enterprise">
-                            <a href="https://alexalexandru20.github.io/alex.github.io/">
+                            <a href="https://digital-cyber1.github.io/alex/">
                                 <img src="image/icon0-vector-441-01.jpg" alt="Web">
                             </a>
                         </div>
